src/Styles/services.scss
@import "./variables.scss";

.services-section {
  width: 100%;
  position: relative;
  padding-top: 8rem;

  .services-bg {
    width: 100%;
    position: absolute;
    z-index: -1;
    @media screen and (max-width: $small-screen) {
      height: 800px;
    }
  }
  .services-info {
    padding: $base-pad;
    padding-top: 5rem;
    @include flex;
    justify-content: flex-start;
    align-items: flex-start;
    color: white;

    @media screen and (max-width: $small-screen) {
      padding: $small-pad;
      flex-direction: column;
    }

    .services-title {
      font-size: 3.5rem;
      font-weight: 700;
      margin-right: 2rem;
      width: 30%;

      @media screen and (max-width: $small-screen) {
        margin: 2rem 0;
      }
    }

    .service-cards {
      display: grid;
      grid-template-columns: repeat(3, 1fr);
      gap: 3rem 8rem;
      margin: 0 auto;

      @media screen and (max-width: $small-screen) {
        grid-template-columns: repeat(2, 1fr);
      }
      .service-card {
        svg {
          font-size: 4rem;
        }

        h4 {
          font-size: 2rem;
        }
      }
    }
  }

  .izohlar {
    width: 60%;
    padding: 2rem;
    margin: 5rem auto 2rem;
    background-color: #27283e;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    border-radius: 5px;

    @media screen and (max-width: $large-screen) {
      margin-top: 1rem;
      width: 80%;
    }
    @media screen and (max-width: $small-screen) {
      flex-direction: column;
      align-items: center;
      width: 90%;
    }
    .izohlar-slider {
      width: 45%;
      @media screen and (max-width: $small-screen) {
        width: 100%;
      }
      .stars {
        svg {
          font-size: 2rem;
          color: gold;
        }
      }
      ::-webkit-scrollbar {
        display: none;
      }
      .slider-content {
        color: white;

        .commenter {
          @include flex;
          justify-content: flex-start;
          gap: 0.5rem;

          svg {
            font-size: 2.5rem;
          }
        }
        p {
          margin: 1rem 0;
          overflow: auto;
          max-height: 100px;
          word-break: break-all;
          @media screen and (max-width: $small-screen) {
            font-size: 1.5rem;
            max-height: 200px;
          }
        }
        h3 {
          @media screen and (max-width: $small-screen) {
            font-size: 1.5rem;
          }
        }
        h4 {
          font-weight: 400;
          @media screen and (max-width: $small-screen) {
            font-size: 1.5rem;
          }
        }
      }
    }
  }
}

